fix: header styling and alignment

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1060,7 +1060,7 @@ body.homepage {
     width: 100%;
     min-height: 75vh;
     min-height: 75dvh;
-    padding: 4em 0;
+    padding: 2em 0;
     @media (max-width: 425px) {
       & {
         padding: 2em 0;
@@ -1085,7 +1085,7 @@ body.homepage {
       flex-direction: column;
       justify-content: space-around;
       line-height: 1.5;
-      font-size: 2.5rem;
+      font-size: 2.25rem;
       font-weight: bolder;
       gap: 1em;
     }
@@ -1099,7 +1099,8 @@ body.homepage {
     }
 
     #bio {
-      font-size: 2rem;
+      font-weight: normal;
+      font-size: 1.5rem;
       color: var(--text-pale-color);
     }
   }
